# electrum_clink

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
clink/: __init__.py  clink_plugin.py  cmdline.py  devfee.py  liquidity.py  manifest.json  nip44.py  noffer.py  offers.py  protocol.py  qt.py  receipts.py
examples/sdk-payer/: README.md  package.json  pay.mjs
scripts/: build_zip.py
tests/: clink_payer.py  conftest.py  test_devfee.py  test_e2e.py  test_liquidity.py  test_nip44.py  test_noffer.py  test_offers.py  test_protocol.py  test_receipts.py
tests/vectors/: noffer.vectors.json
